--- a/fun/Base.lproj/Main.storyboard
+++ b/fun/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14105" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,13 +13,69 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="fun" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Clau is cool" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8RR-kx-xiu">
+                                <rect key="frame" x="143.5" y="323" width="88" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FiR-B5-gJi">
+                                <rect key="frame" x="159.5" y="357.5" width="66" height="30"/>
+                                <state key="normal" title="Hit me :-)"/>
+                                <connections>
+                                    <action selector="buttomTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aIj-Yh-KWa"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ET4-my-hnS">
+                                <rect key="frame" x="137.5" y="273.5" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="i7o-yL-ZpY"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XkZ-OT-bGm">
+                                <rect key="frame" x="137.5" y="193.5" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="e0P-W3-bIs"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UTy-9V-Gsw">
+                                <rect key="frame" x="163" y="149" width="51" height="31"/>
+                            </switch>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="UTy-9V-Gsw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="650-pa-o02"/>
+                            <constraint firstItem="ET4-my-hnS" firstAttribute="top" secondItem="XkZ-OT-bGm" secondAttribute="bottom" constant="50" id="6B4-Nq-90K"/>
+                            <constraint firstItem="ET4-my-hnS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="AnS-JQ-0o9"/>
+                            <constraint firstItem="FiR-B5-gJi" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="5" id="DBL-aS-YTd"/>
+                            <constraint firstItem="XkZ-OT-bGm" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="XWA-DW-cnY"/>
+                            <constraint firstItem="XkZ-OT-bGm" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bLM-f2-Jsn"/>
+                            <constraint firstItem="8RR-kx-xiu" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="ciw-sh-OTh"/>
+                            <constraint firstItem="FiR-B5-gJi" firstAttribute="top" secondItem="8RR-kx-xiu" secondAttribute="bottom" constant="13.333333333333314" id="dh1-rD-Nkx"/>
+                            <constraint firstItem="XkZ-OT-bGm" firstAttribute="top" secondItem="UTy-9V-Gsw" secondAttribute="bottom" constant="13.5" id="flY-aC-UGq"/>
+                            <constraint firstItem="8RR-kx-xiu" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="hca-If-weG"/>
+                            <constraint firstItem="8RR-kx-xiu" firstAttribute="top" secondItem="ET4-my-hnS" secondAttribute="bottom" constant="19.666666666666686" id="hkj-Mf-rmf"/>
+                            <constraint firstItem="ET4-my-hnS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="wbp-8H-kIX"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="additionSwicth" destination="UTy-9V-Gsw" id="ocI-V4-eeS"/>
+                        <outlet property="bottomTextField" destination="ET4-my-hnS" id="mvM-Ej-ngG"/>
+                        <outlet property="myLabel" destination="8RR-kx-xiu" id="4au-TD-BMx"/>
+                        <outlet property="topTextField" destination="XkZ-OT-bGm" id="dcm-yd-vam"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
